# Snake-2-RSDK

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
RSDKv3/: README.md  mod.ini
RSDKv3/Data/Animations/: GuyFieri.ani
RSDKv3/Data/Game/: Credits.txt  Lore.txt
RSDKv3/Data/Palettes/: GuyFieri.act  MasterPalette.act
RSDKv3/Data/Scripts/: Background.txt  Credits.txt  Food.txt  HUD.txt  Lore.txt  Microtransactions.txt  Snake.txt  TextFont.txt  TouchControls.txt
RSDKv5/: README.md  mod.ini
RSDKv5/Data/Strings/: Credits.txt  Lore.txt  Microtransactions.txt
RSDKv5/Source/: Snake2.sln
RSDKv5/Source/Snake2/: Snake2.cpp  Snake2.hpp  Snake2.vcxproj  Snake2.vcxproj.filters
RSDKv5/Source/Snake2/Objects/Game/: Food.cpp  Food.hpp  HUD.cpp  HUD.hpp  Microtransactions.cpp  Microtransactions.hpp  Snake.cpp  Snake.hpp
RSDKv5/Source/Snake2/Objects/Text/: TextSetup.cpp  TextSetup.hpp  TextString.cpp  TextString.hpp
